--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="container">
         <div class="app-title">
-            <p>Weather</p>
+            <p>Barcelona</p>
         </div>
         <div class="notification"> </div>
         <div class="weather-container">
