Steps 3 add searching

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
 
-    <div class="search">
-
+    <div id="search" class="search">
+        <input  type="text" placeholder="search" >
+        <button id="searchBtn" type="submit" >Search</button>
     </div>
     <div id="cards">
 
